feat: google tag

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -22,7 +22,16 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-  <title>Dashboard</title>
+  <title>目的ベースダッシュボード</title>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-PGMVB81E3M"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-PGMVB81E3M');
+  </script>
 </head>
 
 <body>
