--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -6,8 +6,56 @@
   <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Web site created using create-react-app" />
+
+  <!-- SEO メタタグ -->
+  <meta name="description"
+    content="高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。リアルタイムデータとAI分析で最適な営業戦略を提案。" />
+  <meta name="keywords" content="高山市,ダッシュボード,観光,混雑状況,データ可視化,オープンデータ,AI分析,事業者支援,飛騨高山" />
+  <meta name="author" content="Media&Design Group - 遠藤・浦田研究室" />
+  <meta name="robots" content="index,follow" />
+  <meta name="language" content="ja-JP" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="目的ベースダッシュボード | 高山市観光データ可視化" />
+  <meta property="og:description" content="高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。" />
+  <meta property="og:url" content="https://ai-cam-dashbord.vercel.app" />
+  <meta property="og:site_name" content="目的ベースダッシュボード" />
+  <meta property="og:image" content="%PUBLIC_URL%/assets/dashbord_logo.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
+  <meta property="og:locale" content="ja_JP" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="目的ベースダッシュボード | 高山市観光データ可視化" />
+  <meta name="twitter:description" content="高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。" />
+  <meta name="twitter:image" content="%PUBLIC_URL%/assets/dashbord_logo.png" />
+
+  <!-- 構造化データ -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "目的ベースダッシュボード",
+    "description": "高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。",
+    "url": "https://ai-cam-dashbord.vercel.app",
+    "applicationCategory": "BusinessApplication",
+    "operatingSystem": "Web Browser",
+    "author": {
+      "@type": "Organization",
+      "name": "Media&Design Group - 遠藤・浦田研究室"
+    },
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "JPY"
+    }
+  }
+  </script>
+
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+  <link rel="canonical" href="https://ai-cam-dashbord.vercel.app" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
