fix: SEO domein

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -19,7 +19,7 @@
   <meta property="og:type" content="website" />
   <meta property="og:title" content="目的ベースダッシュボード | 高山市観光データ可視化" />
   <meta property="og:description" content="高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。" />
-  <meta property="og:url" content="https://ai-cam-dashbord.vercel.app" />
+  <meta property="og:url" content="https://ai-camera.lab.mdg-meidai.com" />
   <meta property="og:site_name" content="目的ベースダッシュボード" />
   <meta property="og:image" content="%PUBLIC_URL%/assets/dashbord_logo.png" />
   <meta property="og:image:width" content="1200" />
@@ -39,7 +39,7 @@
     "@type": "WebApplication",
     "name": "目的ベースダッシュボード",
     "description": "高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。",
-    "url": "https://ai-cam-dashbord.vercel.app",
+    "url": "https://ai-camera.lab.mdg-meidai.com",
     "applicationCategory": "BusinessApplication",
     "operatingSystem": "Web Browser",
     "author": {
@@ -55,7 +55,7 @@
   </script>
 
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-  <link rel="canonical" href="https://ai-cam-dashbord.vercel.app" />
+  <link rel="canonical" href="https://ai-camera.lab.mdg-meidai.com" />
   <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
