--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
 
   <!-- SEO メタタグ -->
   <meta name="description"
-    content="高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。リアルタイムデータとAI分析で最適な営業戦略を提案。" />
+    content="高山市のオープンデータを活用した目的ベースダッシュボード。観光地の混雑状況を可視化し、事業者の意思決定をサポートします。" />
   <meta name="keywords" content="高山市,ダッシュボード,観光,混雑状況,データ可視化,オープンデータ,AI分析,事業者支援,飛騨高山" />
   <meta name="author" content="Media&Design Group - 遠藤・浦田研究室" />
   <meta name="robots" content="index,follow" />
